GH-3: HackerRank-Java | Introduction

--- a/jacoco-report/pom.xml
+++ b/jacoco-report/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>codingbat</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.sampadadubey.java</groupId>
+            <artifactId>hackerrank</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
