GH-5: Exercism-Java: Need for Speed

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ hs_err_pid*
 **/.settings
 **/.classpath
 **/target/*
+**/cov.xml
 
 # VS code
 .vscode
@@ -76,3 +77,4 @@ hs_err_pid*
 # Project specific
 common/target/**
 codingbat/target/**
+
