--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,18 +23,14 @@ jobs:
           name: Build
           command: |
 
-            VALUE=$(env | grep "CODACY" | cut -d= -f2)
-
-            echo "=============="
-            echo $VALUE
-            echo "=============="
-
+            export CODE_USER="thethoughtcode"
             export PROJECT_NAME="code-challenges-java"
             export SONAR_TOKEN="${ENV_SONAR_TOKEN_CODE_CHALLENGES_JAVA}"
             export COVERAGE_FILE="jacoco-report/target/site/jacoco-aggregate/jacoco.xml"
             export CODACY_PROJECT_NAME="$PROJECT_NAME"
+            export CODACY_USERNAME="$CODE_USER"
 
-            export SONAR_ARGS="            -Dsonar.projectKey=thethoughtcode_${PROJECT_NAME}"
+            export SONAR_ARGS="            -Dsonar.projectKey=${CODE_USER}_${PROJECT_NAME}"
             export SONAR_ARGS="$SONAR_ARGS -Dsonar.organization=$ENV_SONAR_ORGANIZATION"
             export SONAR_ARGS="$SONAR_ARGS -Dsonar.host.url=https://sonarcloud.io"
             export SONAR_ARGS="$SONAR_ARGS -Dsonar.coverage.jacoco.xmlReportPaths=$COVERAGE_FILE"
